docs/language-grammar.ebnf
(* Current language grammar implemented by Parser.cpp. *)

program     = { declaration } ;

declaration = importDecl
            | exportDecl
            | enumDecl
            | structDecl
            | implDecl
            | funDecl
            | letDecl
            | statement ;

statement   = printStmt
            | ifStmt
            | matchStmt
            | whileStmt
            | forStmt
            | breakStmt
            | continueStmt
            | returnStmt
            | block
            | exprStmt ;

funDecl     = "fun", identifier, [ typeParameters ],
              "(", [ parameters ], ")",
              [ ":", typeExpr ],
              block ;

typeParameters = "<", identifier,
                 { ",", identifier }, ">" ;

structDecl  = "struct", identifier,
              "{", [ structFields ], "}" ;

enumDecl    = "enum", identifier,
              "{", [ enumVariants ], "}" ;

enumVariants = enumVariant,
               { ",", enumVariant }, [ "," ] ;

enumVariant = identifier,
              [ "(", [ typeArguments ], ")" ] ;

implDecl    = "impl", identifier,
              "{", { methodDecl }, "}" ;

methodDecl  = "fun", identifier, [ typeParameters ],
              "(", [ parameters ], ")",
              [ ":", typeExpr ],
              block ;

structFields = structField,
               { ",", structField } ;

structField = identifier, ":", typeExpr ;

parameters  = parameter,
              { ",", parameter } ;

parameter   = identifier,
              [ ":", typeExpr ] ;

letDecl     = "let", identifier,
              [ ":", typeExpr ],
              "=", expression, ";" ;

importDecl  = "import", string,
              [ "as", identifier ], ";" ;

exportDecl  = "export", identifier,
              { ",", identifier },
              [ "from", string ], ";" ;

ifStmt      = "if", expression, block,
              [ "else", block ] ;

matchStmt   = "match", expression, "{", { matchArm }, "}" ;

matchArm    = pattern, "=>", block ;

pattern     = "_"
            | identifier
            | literalPattern
            | variantPattern ;

literalPattern = "nil"
                | "true"
                | "false"
                | number
                | string ;

variantPattern = identifier, ".", identifier,
                 [ "(", [ pattern, { ",", pattern } ], ")" ]
               | identifier, ".", identifier, ".", identifier,
                 [ "(", [ pattern, { ",", pattern } ], ")" ] ;

whileStmt   = "while", expression, block ;

forStmt     = "for", ( forInClause | cForClause ), block ;

forInClause = identifier, "in", expression ;

cForClause  = [ forInitializer ], ";",
              [ expression ], ";",
              [ expression ] ;

forInitializer = letForInitializer
               | expression ;

letForInitializer = "let", identifier,
                    [ ":", typeExpr ],
                    "=", expression ;

breakStmt   = "break", ";" ;

continueStmt = "continue", ";" ;

block       = "{", { declaration }, "}" ;

printStmt   = "print", expression, ";" ;

returnStmt  = "return", [ expression ], ";" ;

exprStmt    = expression, ";" ;

expression  = assignment ;

assignment  = logicalOr,
              [ ( "=" | "+=" | "-=" | "*=" | "/=" ), assignment ] ;

assignmentTarget = identifier
                 | call, "[", expression, "]"
                 | call, ".", identifier ;

(* Assignment is right-associative. Plain `=` and compound assignment operators
   accept variable, index, and field targets (`name = value`, `array[index] = value`,
   `object.field = value`, `name += value`, `array[index] += value`, and
   `object.field += value`). Compound assignment is numeric-only. All other left
   sides are parse errors. *)

logicalOr   = logicalAnd,
              { "||", logicalAnd } ;

logicalAnd  = equality,
              { "&&", equality } ;

equality    = comparison,
              { ( "==" | "!=" ), comparison } ;

comparison  = term,
              { ( "<" | "<=" | ">" | ">=" ), term } ;

term        = factor,
              { ( "+" | "-" ), factor } ;

factor      = unary,
              { ( "*" | "/" ), unary } ;

unary       = ( "!" | "-" ), unary
            | call ;

call        = primary,
              { genericCall
              | "(", [ arguments ], ")"
              | "[", expression, "]"
              | memberPostfix } ;

genericCall = callTypeArguments, "(", [ arguments ], ")" ;

memberPostfix = ".", identifier,
                [ callTypeArguments ],
                [ "(", [ arguments ], ")" ] ;

(* A generic call uses the compact postfix form name<T>(arguments) or
   namespace.name<T>(arguments). The parser requires the `<` to be adjacent to
   the callee name to keep ordinary comparison expressions unambiguous. *)

callTypeArguments = "<", typeExpr,
                    { ",", typeExpr }, ">" ;

arguments   = expression,
              { ",", expression } ;

array       = "[", [ arguments ], "]" ;

map         = "{", [ mapEntries ], "}" ;

mapEntries  = mapEntry,
              { ",", mapEntry } ;

mapEntry    = expression, ":", expression ;

(* A brace in expression position is a map literal; statement-level braces
   remain blocks. Anonymous struct literals are not a separate form. A
   qualified member call such as Result.Ok(value) is a variant constructor
   when Result is an enum type. *)


structConstructor = [ identifier, "." ], identifier, "{", [ fields ], "}" ;

fields      = field,
              { ",", field } ;

field       = identifier, ":", expression ;

functionExpr = "fun", [ typeParameters ], "(", [ parameters ], ")",
               [ ":", typeExpr ],
               block ;

primary     = functionExpr
            | "false"
            | "true"
            | "nil"
            | number
            | string
            | array
            | map
            | structConstructor
            | identifier
            | "(", expression, ")" ;

typeExpr    = nullableType ;

nullableType = primaryType,
               [ "?" ] ;

primaryType = arrayType
            | mapType
            | functionType
            | qualifiedType
            | simpleType ;

arrayType   = "[", typeExpr, "]" ;

mapType     = "map", "<", typeExpr, ",", typeExpr, ">" ;

simpleType  = identifier ;

qualifiedType = identifier, ".", identifier ;

functionType = "fun", "(", [ typeArguments ], ")", ":", typeExpr ;

(* `T?` means `T` or `nil`. This slice supports nullable function parameter and
   return types, but not nullable function values such as `(fun(number): string)?`. *)

typeArguments = typeExpr,
                { ",", typeExpr } ;
identifier  = letter, { letter | digit | "_" } ;
number      = digit, { digit }, [ ".", digit, { digit } ] ;
string      = '"', { character }, '"' ;
