src/Parser.cpp
#include "Parser.hpp"

#include <optional>
#include <sstream>
#include <utility>

namespace {

std::string expectedFunStartMessage(const Token& token)
{
    std::ostringstream message;
    message << "expected function name after `fun` declaration or `(` for function expression, found "
            << tokenTypeName(token.type);
    if (!token.lexeme.empty()) {
        message << " `" << token.lexeme << "`";
    }
    return message.str();
}

std::optional<SourceSpan> spanForToken(const Token& token)
{
    if (!token.source) {
        return std::nullopt;
    }
    return SourceSpan{
        *token.source,
        token.sourceLine.value_or(token.line),
        token.column,
    };
}

template <typename Node>
std::unique_ptr<Node> withSpan(std::unique_ptr<Node> node, const Token& token)
{
    node->span = spanForToken(token);
    return node;
}

template <typename Node>
std::unique_ptr<Node> withSpan(std::unique_ptr<Node> node, const std::optional<SourceSpan>& span)
{
    node->span = span;
    return node;
}

template <typename VariableBuilder, typename IndexBuilder, typename FieldBuilder>
ExprPtr buildAssignmentTarget(
    ExprPtr& expr,
    VariableBuilder variableBuilder,
    IndexBuilder indexBuilder,
    FieldBuilder fieldBuilder)
{
    if (const auto* variable = dynamic_cast<const VariableExpr*>(expr.get())) {
        return variableBuilder(variable->name);
    }

    if (auto* index = dynamic_cast<IndexExpr*>(expr.get())) {
        ExprPtr collection = std::move(index->collection);
        Token bracket = std::move(index->bracket);
        ExprPtr indexExpression = std::move(index->index);
        return indexBuilder(std::move(collection), std::move(bracket), std::move(indexExpression));
    }

    if (auto* field = dynamic_cast<FieldAccessExpr*>(expr.get())) {
        ExprPtr object = std::move(field->object);
        Token name = std::move(field->name);
        return fieldBuilder(std::move(object), std::move(name));
    }

    return nullptr;
}

} // namespace

ParseError::ParseError(const Token& token, const std::string& message)
    : DiagnosticError(DiagnosticKind::Parse, SourceLocation{token.line, token.column}, message)
{
}

ParseErrorList::ParseErrorList(std::vector<ParseError> errors)
    : errors_(std::move(errors))
{
}

const std::vector<ParseError>& ParseErrorList::errors() const
{
    return errors_;
}

const char* ParseErrorList::what() const noexcept
{
    return "parse errors";
}

Parser::Parser(std::vector<Token> tokens)
    : tokens_(std::move(tokens))
{
}

Program Parser::parse()
{
    Program program;
    errors_.clear();

    while (!isAtEnd()) {
        if (std::optional<StmtPtr> statement = parseDeclarationRecovering(false)) {
            program.statements.push_back(std::move(*statement));
        }
    }

    if (!errors_.empty()) {
        throw ParseErrorList(std::move(errors_));
    }

    return program;
}

void Parser::recordParseError(ParseError error)
{
    errors_.push_back(std::move(error));
}

std::optional<StmtPtr> Parser::parseDeclarationRecovering(bool stopAtRightBrace)
{
    try {
        return declaration();
    } catch (const ParseError& error) {
        recordParseError(error);
        synchronize(stopAtRightBrace);
        return std::nullopt;
    }
}

void Parser::synchronize(bool stopAtRightBrace)
{
    if (check(TokenType::Semicolon)) {
        advance();
    }

    while (!isAtEnd()) {
        if (check(TokenType::RightBrace)) {
            if (!stopAtRightBrace) {
                advance();
            }
            return;
        }

        switch (peek().type) {
        case TokenType::Let:
        case TokenType::Fun:
        case TokenType::Struct:
        case TokenType::Impl:
        case TokenType::Import:
        case TokenType::Export:
        case TokenType::Print:
        case TokenType::If:
        case TokenType::While:
        case TokenType::For:
        case TokenType::Break:
        case TokenType::Continue:
        case TokenType::Return:
        case TokenType::LeftBrace:
            return;
        default:
            advance();
            break;
        }
    }
}

StmtPtr Parser::declaration()
{
    if (match(TokenType::Export)) {
        if (blockDepth_ != 0) {
            throw ParseError(previous(), "`export` is only allowed at top level");
        }
        return exportDeclaration();
    }
    if (match(TokenType::Import)) {
        if (blockDepth_ != 0) {
            throw ParseError(previous(), "`import` is only allowed at top level");
        }
        return importDeclaration();
    }
    if (match(TokenType::Struct)) {
        return structDeclaration();
    }
    if (match(TokenType::Impl)) {
        if (blockDepth_ != 0) {
            throw ParseError(previous(), "`impl` is only allowed at top level");
        }
        return implDeclaration();
    }
    if (check(TokenType::Fun) && checkNext(TokenType::Identifier)) {
        advance();
        return functionDeclaration();
    }
    if (check(TokenType::Fun) && !checkNext(TokenType::LeftParen)) {
        advance();
        throw ParseError(peek(), expectedFunStartMessage(peek()));
    }
    if (match(TokenType::Let)) {
        return letDeclaration();
    }
    return statement();
}

StmtPtr Parser::exportDeclaration()
{
    Token keyword = previous();
    std::vector<Token> names;

    names.push_back(consume(TokenType::Identifier, "expected identifier after `export`"));
    while (match(TokenType::Comma)) {
        names.push_back(consume(TokenType::Identifier, "expected identifier after `,` in export list"));
    }

    std::optional<Token> sourcePath;
    if (matchContextualIdentifier("from")) {
        sourcePath = consume(TokenType::String, "expected re-export path string");
        consume(TokenType::Semicolon, "expected `;` after re-export path");
    } else {
        consume(TokenType::Semicolon, "expected `;` after export list");
    }

    const std::optional<SourceSpan> span = spanForToken(keyword);
    return withSpan(
        std::make_unique<ExportStmt>(std::move(keyword), std::move(names), std::move(sourcePath)),
        span);
}

StmtPtr Parser::structDeclaration()
{
    Token keyword = previous();
    Token name = consume(TokenType::Identifier, "expected struct name after `struct`");
    consume(TokenType::LeftBrace, "expected `{` after struct name");
    std::vector<StructFieldDecl> fields = structFields();
    consume(TokenType::RightBrace, "expected `}` after struct fields");
    const std::optional<SourceSpan> span = spanForToken(keyword);
    return withSpan(std::make_unique<StructDeclStmt>(std::move(name), std::move(fields)), span);
}

std::vector<StructFieldDecl> Parser::structFields()
{
    std::vector<StructFieldDecl> fields;
    if (!check(TokenType::RightBrace)) {
        do {
            fields.push_back(structField());
        } while (match(TokenType::Comma));
    }
    return fields;
}

StructFieldDecl Parser::structField()
{
    Token name = consume(TokenType::Identifier, "expected struct field name");
    consume(TokenType::Colon, "expected `:` after struct field name");
    TypeAnnotation typeName = typeAnnotation("expected struct field type after `:`");
    return StructFieldDecl{std::move(name), std::move(typeName)};
}

StmtPtr Parser::implDeclaration()
{
    Token keyword = previous();
    Token typeName = consume(TokenType::Identifier, "expected struct name after `impl`");
    consume(TokenType::LeftBrace, "expected `{` after impl type name");
    std::vector<MethodDecl> methods;
    while (!check(TokenType::RightBrace) && !isAtEnd()) {
        methods.push_back(methodDeclaration());
    }
    consume(TokenType::RightBrace, "expected `}` after impl methods");
    const std::optional<SourceSpan> span = spanForToken(keyword);
    return withSpan(std::make_unique<ImplStmt>(std::move(typeName), std::move(methods)), span);
}

MethodDecl Parser::methodDeclaration()
{
    consume(TokenType::Fun, "expected `fun` method declaration in impl block");
    Token name = consume(TokenType::Identifier, "expected method name after `fun`");
    consume(TokenType::LeftParen, "expected `(` after method name");
    std::vector<Parameter> parsedParameters = parameters();
    consume(TokenType::RightParen, "expected `)` after method parameters");
    std::optional<TypeAnnotation> returnTypeName = optionalReturnType();
    consume(TokenType::LeftBrace, "expected `{` before method body");
    ++blockDepth_;
    std::vector<StmtPtr> body = blockStatements();
    --blockDepth_;
    return MethodDecl(
        std::move(name),
        std::move(parsedParameters),
        std::move(returnTypeName),
        std::move(body));
}

StmtPtr Parser::functionDeclaration()
{
    Token keyword = previous();
    Token name = consume(TokenType::Identifier, "expected function name after `fun`");
    std::vector<Token> parsedTypeParameters = typeParameters();
    consume(TokenType::LeftParen, "expected `(` after function name");

    std::vector<Parameter> parsedParameters = parameters();
    consume(TokenType::RightParen, "expected `)` after function parameters");
    std::optional<TypeAnnotation> returnTypeName = optionalReturnType();
    consume(TokenType::LeftBrace, "expected `{` before function body");
    ++blockDepth_;
    std::vector<StmtPtr> body = blockStatements();
    --blockDepth_;
    const std::optional<SourceSpan> span = spanForToken(keyword);
    return withSpan(
        std::make_unique<FunctionStmt>(
            std::move(name),
            std::move(parsedTypeParameters),
            std::move(parsedParameters),
            std::move(returnTypeName),
            std::move(body)),
        span);
}

std::vector<Token> Parser::typeParameters()
{
    std::vector<Token> parameters;
    if (!match(TokenType::Less)) {
        return parameters;
    }
    do {
        parameters.push_back(consume(
            TokenType::Identifier,
            "expected type parameter name after `<` or `,`"));
    } while (match(TokenType::Comma));
    consume(TokenType::Greater, "expected `>` after type parameters");
    return parameters;
}

StmtPtr Parser::letDeclarationNoSemicolon(const std::string& terminatorMessage)
{
    Token keyword = previous();
    Token name = consume(TokenType::Identifier, "expected variable name after `let`");

    std::optional<TypeAnnotation> typeName;
    if (match(TokenType::Colon)) {
        typeName = typeAnnotation("expected type name after `:`");
    }

    consume(TokenType::Equal, "expected `=` after variable declaration");
    ExprPtr initializer = expression();

    if (!terminatorMessage.empty()) {
        consume(TokenType::Semicolon, terminatorMessage);
    }
    const std::optional<SourceSpan> span = spanForToken(keyword);
    return withSpan(
        std::make_unique<LetStmt>(std::move(name), std::move(typeName), std::move(initializer)),
        span);
}

StmtPtr Parser::letDeclaration()
{
    return letDeclarationNoSemicolon("expected `;` after variable declaration");
}

StmtPtr Parser::importDeclaration()
{
    Token keyword = previous();
    Token path = consume(TokenType::String, "expected import path string");
    std::optional<Token> alias;
    if (match(TokenType::As)) {
        alias = consume(TokenType::Identifier, "expected namespace alias after `as`");
    }
    consume(TokenType::Semicolon, alias ? "expected `;` after import alias" : "expected `;` after import path");
    const std::optional<SourceSpan> span = spanForToken(keyword);
    return withSpan(
        std::make_unique<ImportStmt>(std::move(keyword), std::move(path), std::move(alias)),
        span);
}

std::vector<Parameter> Parser::parameters()
{
    std::vector<Parameter> parsedParameters;
    if (!check(TokenType::RightParen)) {
        do {
            parsedParameters.push_back(parameter());
        } while (match(TokenType::Comma));
    }
    return parsedParameters;
}

Parameter Parser::parameter()
{
    Token name = consume(TokenType::Identifier, "expected parameter name");
    std::optional<TypeAnnotation> typeName;
    if (match(TokenType::Colon)) {
        typeName = typeAnnotation("expected parameter type after `:`");
    }
    return Parameter{std::move(name), std::move(typeName)};
}

std::optional<TypeAnnotation> Parser::optionalReturnType()
{
    if (!match(TokenType::Colon)) {
        return std::nullopt;
    }
    return typeAnnotation("expected return type after `:`");
}

TypeAnnotation Parser::typeAnnotation(const std::string& simpleTypeMessage)
{
    if (match(TokenType::LeftBracket)) {
        Token bracket = previous();
        TypeAnnotation elementType = typeAnnotation("expected array element type after `[`");
        consume(TokenType::RightBracket, "expected `]` after array element type");
        TypeAnnotation annotation = TypeAnnotation::array(std::move(bracket), std::move(elementType));
        if (match(TokenType::Question)) {
            annotation = TypeAnnotation::nullable(previous(), std::move(annotation));
        }
        return annotation;
    }

    if (match(TokenType::Fun)) {
        Token keyword = previous();
        consume(TokenType::LeftParen, "expected `(` after `fun` in function type");
        std::vector<TypeAnnotation> parameterTypes = typeArguments();
        consume(TokenType::RightParen, "expected `)` after function type parameters");
        consume(TokenType::Colon, "expected `:` before function type return");
        TypeAnnotation returnType = typeAnnotation();
        return TypeAnnotation::function(std::move(keyword), std::move(parameterTypes), std::move(returnType));
    }

    Token name = consume(TokenType::Identifier, simpleTypeMessage);
    TypeAnnotation annotation;
    if (match(TokenType::Dot)) {
        Token member = consume(TokenType::Identifier, "expected type name after `.`");
        annotation = TypeAnnotation::qualified(std::move(name), std::move(member));
    } else {
        annotation = TypeAnnotation::simple(std::move(name));
    }
    if (match(TokenType::Question)) {
        annotation = TypeAnnotation::nullable(previous(), std::move(annotation));
    }
    return annotation;
}

std::vector<TypeAnnotation> Parser::typeArguments()
{
    std::vector<TypeAnnotation> arguments;
    if (!check(TokenType::RightParen)) {
        do {
            arguments.push_back(typeAnnotation());
        } while (match(TokenType::Comma));
    }
    return arguments;
}

StmtPtr Parser::statement()
{
    if (match(TokenType::Print)) {
        return printStatement();
    }
    if (match(TokenType::If)) {
        return ifStatement();
    }
    if (match(TokenType::For)) {
        return forStatement();
    }
    if (match(TokenType::While)) {
        return whileStatement();
    }
    if (match(TokenType::Break)) {
        return breakStatement();
    }
    if (match(TokenType::Continue)) {
        return continueStatement();
    }
    if (match(TokenType::Return)) {
        return returnStatement();
    }
    if (match(TokenType::LeftBrace)) {
        return blockStatement();
    }
    return expressionStatement();
}

StmtPtr Parser::ifStatement()
{
    Token keyword = previous();
    ExprPtr condition = conditionExpression();
    consume(TokenType::LeftBrace, "expected `{` after if condition");
    StmtPtr thenBranch = blockStatement();

    StmtPtr elseBranch;
    if (match(TokenType::Else)) {
        consume(TokenType::LeftBrace, "expected `{` after `else`");
        elseBranch = blockStatement();
    }

    const std::optional<SourceSpan> span = spanForToken(keyword);
    return withSpan(
        std::make_unique<IfStmt>(std::move(condition), std::move(thenBranch), std::move(elseBranch)),
        span);
}

StmtPtr Parser::forInitializer()
{
    if (check(TokenType::Semicolon)) {
        return nullptr;
    }
    if (match(TokenType::Let)) {
        return letDeclarationNoSemicolon("");
    }
    return expressionStatementNoSemicolon();
}

StmtPtr Parser::forStatement()
{
    Token keyword = previous();

    if (check(TokenType::In)) {
        throw ParseError(peek(), "expected for loop initializer before `in`");
    }
    if (check(TokenType::Identifier) && checkNext(TokenType::In)) {
        Token variable = advance();
        advance();
        return forInStatement(std::move(keyword), std::move(variable));
    }

    StmtPtr initializer = forInitializer();
    consume(TokenType::Semicolon, "expected `;` after for initializer");

    ExprPtr condition;
    if (!check(TokenType::Semicolon)) {
        condition = expression();
    }
    consume(TokenType::Semicolon, "expected `;` after for condition");

    ExprPtr increment;
    if (!check(TokenType::LeftBrace)) {
        increment = expression();
    }
    consume(TokenType::LeftBrace, "expected `{` after for clauses");
    StmtPtr body = blockStatement();

    const std::optional<SourceSpan> span = spanForToken(keyword);
    return withSpan(
        std::make_unique<ForStmt>(std::move(keyword), std::move(initializer), std::move(condition), std::move(increment), std::move(body)),
        span);
}

StmtPtr Parser::forInStatement(Token keyword, Token variable)
{
    if (check(TokenType::LeftBrace)) {
        throw ParseError(peek(), "expected expression");
    }
    ExprPtr iterable = conditionExpression();
    consume(TokenType::LeftBrace, "expected `{` after for-in iterable");
    StmtPtr body = blockStatement();
    const std::optional<SourceSpan> span = spanForToken(keyword);
    return withSpan(
        std::make_unique<ForInStmt>(std::move(keyword), std::move(variable), std::move(iterable), std::move(body)),
        span);
}

StmtPtr Parser::whileStatement()
{
    Token keyword = previous();
    ExprPtr condition = conditionExpression();
    consume(TokenType::LeftBrace, "expected `{` after while condition");
    StmtPtr body = blockStatement();
    const std::optional<SourceSpan> span = spanForToken(keyword);
    return withSpan(std::make_unique<WhileStmt>(std::move(condition), std::move(body)), span);
}

StmtPtr Parser::breakStatement()
{
    Token keyword = previous();
    consume(TokenType::Semicolon, "expected `;` after break");
    const std::optional<SourceSpan> span = spanForToken(keyword);
    return withSpan(std::make_unique<BreakStmt>(std::move(keyword)), span);
}

StmtPtr Parser::continueStatement()
{
    Token keyword = previous();
    consume(TokenType::Semicolon, "expected `;` after continue");
    const std::optional<SourceSpan> span = spanForToken(keyword);
    return withSpan(std::make_unique<ContinueStmt>(std::move(keyword)), span);
}

StmtPtr Parser::blockStatement()
{
    Token brace = previous();
    ++blockDepth_;
    std::vector<StmtPtr> statements = blockStatements();
    --blockDepth_;
    const std::optional<SourceSpan> span = spanForToken(brace);
    return withSpan(std::make_unique<BlockStmt>(std::move(statements)), span);
}

std::vector<StmtPtr> Parser::blockStatements()
{
    std::vector<StmtPtr> statements;
    while (!check(TokenType::RightBrace) && !isAtEnd()) {
        if (std::optional<StmtPtr> statement = parseDeclarationRecovering(true)) {
            statements.push_back(std::move(*statement));
        }
    }
    consume(TokenType::RightBrace, "expected `}` after block");
    return statements;
}

StmtPtr Parser::printStatement()
{
    Token keyword = previous();
    ExprPtr value = expression();
    consume(TokenType::Semicolon, "expected `;` after print value");
    const std::optional<SourceSpan> span = spanForToken(keyword);
    return withSpan(std::make_unique<PrintStmt>(std::move(value)), span);
}

StmtPtr Parser::returnStatement()
{
    Token keyword = previous();
    ExprPtr value;
    if (!check(TokenType::Semicolon)) {
        value = expression();
    }
    consume(TokenType::Semicolon, "expected `;` after return value");
    const std::optional<SourceSpan> span = spanForToken(keyword);
    return withSpan(std::make_unique<ReturnStmt>(std::move(keyword), std::move(value)), span);
}

StmtPtr Parser::expressionStatementNoSemicolon()
{
    ExprPtr value = expression();
    std::optional<SourceSpan> span = value ? value->span : std::nullopt;
    return withSpan(std::make_unique<ExpressionStmt>(std::move(value)), span);
}

StmtPtr Parser::expressionStatement()
{
    StmtPtr statement = expressionStatementNoSemicolon();
    consume(TokenType::Semicolon, "expected `;` after expression");
    return statement;
}

ExprPtr Parser::expression()
{
    return assignment();
}

ExprPtr Parser::conditionExpression()
{
    const bool previousAllowStructConstructors = allowStructConstructors_;
    allowStructConstructors_ = false;
    ExprPtr result = expression();
    allowStructConstructors_ = previousAllowStructConstructors;
    return result;
}

ExprPtr Parser::assignment()
{
    ExprPtr expr = logicalOr();

    if (match(TokenType::Equal)) {
        Token equals = previous();
        ExprPtr value = assignment();

        const std::optional<SourceSpan> span = expr ? expr->span : std::nullopt;
        ExprPtr assignment = buildAssignmentTarget(
            expr,
            [&](Token name) -> ExprPtr {
                return std::make_unique<AssignExpr>(std::move(name), std::move(value));
            },
            [&](ExprPtr collection, Token bracket, ExprPtr indexExpression) -> ExprPtr {
                return std::make_unique<IndexAssignExpr>(
                    std::move(collection), std::move(bracket), std::move(indexExpression), std::move(value));
            },
            [&](ExprPtr object, Token name) -> ExprPtr {
                return std::make_unique<FieldAssignExpr>(std::move(object), std::move(name), std::move(value));
            });
        if (assignment) {
            assignment->span = span;
            return assignment;
        }

        throw ParseError(equals, "invalid assignment target");
    }

    if (matchCompoundAssignment()) {
        Token op = previous();
        ExprPtr value = assignment();

        const std::optional<SourceSpan> span = expr ? expr->span : std::nullopt;
        ExprPtr assignment = buildAssignmentTarget(
            expr,
            [&](Token name) -> ExprPtr {
                return std::make_unique<CompoundAssignExpr>(std::move(name), std::move(op), std::move(value));
            },
            [&](ExprPtr collection, Token bracket, ExprPtr indexExpression) -> ExprPtr {
                return std::make_unique<IndexCompoundAssignExpr>(
                    std::move(collection), std::move(bracket), std::move(indexExpression), std::move(op), std::move(value));
            },
            [&](ExprPtr object, Token name) -> ExprPtr {
                return std::make_unique<FieldCompoundAssignExpr>(std::move(object), std::move(name), std::move(op), std::move(value));
            });
        if (assignment) {
            assignment->span = span;
            return assignment;
        }

        throw ParseError(op, "invalid compound assignment target");
    }

    return expr;
}

bool Parser::matchCompoundAssignment()
{
    return match(TokenType::PlusEqual)
        || match(TokenType::MinusEqual)
        || match(TokenType::StarEqual)
        || match(TokenType::SlashEqual);
}

ExprPtr Parser::logicalOr()
{
    ExprPtr expr = logicalAnd();
    while (match(TokenType::PipePipe)) {
        Token op = previous();
        ExprPtr right = logicalAnd();
        const std::optional<SourceSpan> span = expr ? expr->span : std::nullopt;
        expr = withSpan(
            std::make_unique<LogicalExpr>(std::move(expr), std::move(op), std::move(right)),
            span);
    }
    return expr;
}

ExprPtr Parser::logicalAnd()
{
    ExprPtr expr = equality();
    while (match(TokenType::AmpersandAmpersand)) {
        Token op = previous();
        ExprPtr right = equality();
        const std::optional<SourceSpan> span = expr ? expr->span : std::nullopt;
        expr = withSpan(
            std::make_unique<LogicalExpr>(std::move(expr), std::move(op), std::move(right)),
            span);
    }
    return expr;
}

ExprPtr Parser::equality()
{
    ExprPtr expr = comparison();
    // Left-associative binary operators are folded as they are encountered:
    // `a == b != c` becomes `(!= (== a b) c)`.
    while (match(TokenType::BangEqual) || match(TokenType::EqualEqual)) {
        Token op = previous();
        ExprPtr right = comparison();
        const std::optional<SourceSpan> span = expr ? expr->span : std::nullopt;
        expr = withSpan(
            std::make_unique<BinaryExpr>(std::move(expr), std::move(op), std::move(right)),
            span);
    }
    return expr;
}

ExprPtr Parser::comparison()
{
    ExprPtr expr = term();
    while (match(TokenType::Greater) || match(TokenType::GreaterEqual)
        || match(TokenType::Less) || match(TokenType::LessEqual)) {
        Token op = previous();
        ExprPtr right = term();
        const std::optional<SourceSpan> span = expr ? expr->span : std::nullopt;
        expr = withSpan(
            std::make_unique<BinaryExpr>(std::move(expr), std::move(op), std::move(right)),
            span);
    }
    return expr;
}

ExprPtr Parser::term()
{
    ExprPtr expr = factor();
    while (match(TokenType::Minus) || match(TokenType::Plus)) {
        Token op = previous();
        ExprPtr right = factor();
        const std::optional<SourceSpan> span = expr ? expr->span : std::nullopt;
        expr = withSpan(
            std::make_unique<BinaryExpr>(std::move(expr), std::move(op), std::move(right)),
            span);
    }
    return expr;
}

ExprPtr Parser::factor()
{
    ExprPtr expr = unary();
    while (match(TokenType::Slash) || match(TokenType::Star)) {
        Token op = previous();
        ExprPtr right = unary();
        const std::optional<SourceSpan> span = expr ? expr->span : std::nullopt;
        expr = withSpan(
            std::make_unique<BinaryExpr>(std::move(expr), std::move(op), std::move(right)),
            span);
    }
    return expr;
}

ExprPtr Parser::unary()
{
    if (match(TokenType::Bang) || match(TokenType::Minus)) {
        Token op = previous();
        ExprPtr right = unary();
        const std::optional<SourceSpan> span = spanForToken(op);
        return withSpan(std::make_unique<UnaryExpr>(std::move(op), std::move(right)), span);
    }

    return call();
}

ExprPtr Parser::call()
{
    ExprPtr expr = primary();
    while (true) {
        if (match(TokenType::LeftParen)) {
            expr = finishCall(std::move(expr));
        } else if (match(TokenType::LeftBracket)) {
            expr = finishIndex(std::move(expr));
        } else if (match(TokenType::Dot)) {
            expr = finishFieldAccess(std::move(expr));
        } else {
            break;
        }
    }
    return expr;
}

ExprPtr Parser::finishCall(ExprPtr callee)
{
    const std::optional<SourceSpan> span = callee ? callee->span : std::nullopt;
    std::vector<ExprPtr> arguments;
    if (!check(TokenType::RightParen)) {
        do {
            arguments.push_back(expression());
        } while (match(TokenType::Comma));
    }
    Token paren = consume(TokenType::RightParen, "expected `)` after arguments");

    if (auto* field = dynamic_cast<FieldAccessExpr*>(callee.get())) {
        ExprPtr receiver = std::move(field->object);
        Token name = std::move(field->name);
        return withSpan(
            std::make_unique<MemberCallExpr>(std::move(receiver), std::move(name), std::move(paren), std::move(arguments)),
            span);
    }

    return withSpan(
        std::make_unique<CallExpr>(std::move(callee), std::move(paren), std::move(arguments)),
        span);
}

ExprPtr Parser::finishIndex(ExprPtr collection)
{
    const std::optional<SourceSpan> span = collection ? collection->span : std::nullopt;
    Token bracket = previous();
    ExprPtr index = expression();
    consume(TokenType::RightBracket, "expected `]` after index");
    return withSpan(
        std::make_unique<IndexExpr>(std::move(collection), std::move(bracket), std::move(index)),
        span);
}

ExprPtr Parser::finishFieldAccess(ExprPtr object)
{
    const std::optional<SourceSpan> span = object ? object->span : std::nullopt;
    Token name = consume(TokenType::Identifier, "expected field name after `.`");
    return withSpan(std::make_unique<FieldAccessExpr>(std::move(object), std::move(name)), span);
}

ExprPtr Parser::arrayLiteral(Token bracket)
{
    const std::optional<SourceSpan> span = spanForToken(bracket);
    std::vector<ExprPtr> elements;
    if (!check(TokenType::RightBracket)) {
        do {
            elements.push_back(expression());
        } while (match(TokenType::Comma));
    }
    consume(TokenType::RightBracket, "expected `]` after array elements");
    return withSpan(std::make_unique<ArrayExpr>(std::move(bracket), std::move(elements)), span);
}

std::vector<StructField> Parser::structLiteralFields()
{
    std::vector<StructField> fields;
    if (!check(TokenType::RightBrace)) {
        do {
            Token name = consume(TokenType::Identifier, "expected struct field name");
            consume(TokenType::Colon, "expected `:` after struct field name");
            ExprPtr value = expression();
            fields.push_back(StructField{std::move(name), std::move(value)});
        } while (match(TokenType::Comma));
    }
    return fields;
}

ExprPtr Parser::structConstructor()
{
    Token name = consume(TokenType::Identifier, "expected struct constructor name");
    const std::optional<SourceSpan> span = spanForToken(name);
    consume(TokenType::LeftBrace, "expected `{` after struct constructor name");
    std::vector<StructField> fields = structLiteralFields();
    consume(TokenType::RightBrace, "expected `}` after struct fields");
    return withSpan(
        std::make_unique<StructConstructExpr>(std::nullopt, std::move(name), std::move(fields)),
        span);
}

bool Parser::isQualifiedStructConstructorStart() const
{
    return check(TokenType::Identifier)
        && current_ + 3 < tokens_.size()
        && tokens_[current_ + 1].type == TokenType::Dot
        && tokens_[current_ + 2].type == TokenType::Identifier
        && tokens_[current_ + 3].type == TokenType::LeftBrace;
}
